<resources>
    <string name="app_name">NutriCam</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="newUser_button">New User</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="take_picture">Take Picture</string>
    <string name="view_food_history">View Food History</string>
    <string name="food_history_title">Your Food History</string>
    <string name="main_activity_text">Use \"Take Picture\" to see the nutrition facts of any food!</string>
</resources>
