<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jaghory.nutricam.LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/login_username"
        android:hint="@string/email"
        android:inputType="textAutoComplete|textEmailAddress"/>

    <EditText
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:hint="@string/password"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_btn"
        android:layout_marginTop="10dp"
        android:background="#a90001"
        android:textColor="#f5f5f5"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/newUser_button"
        android:id="@+id/newUser_btn"
        android:layout_marginTop="15dp"
        android:textColor="#f5f5f5"
        android:background="#a80001"/>

</LinearLayout>
