<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
                android:background="@color/colorBack"

                android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              tools:context="com.jaghory.nutricam.SignUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signup_username"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signup_password"
        android:hint="@string/password"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp_button"
        android:id="@+id/signUp_btn"
        android:layout_marginTop="10dp"
        android:background="#a00001"
        android:textColor="#f5f5f5"/>

</LinearLayout>
